--- a/Source/composer.json
+++ b/Source/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.6",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "symfony/polyfill-iconv": "^1.7"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
